--- a/B2BApp.Web/Views/Firma/Index.cshtml
+++ b/B2BApp.Web/Views/Firma/Index.cshtml
@@ -69,7 +69,8 @@
 
             "ajax":
             {
-                "url": "https://localhost/api/firma/all"
+                "url": "https://localhost/api/firma/all",
+                
             },
 
             "columns": [
